tests/snapshots/lastwake__lastwake_default.snap
---
source: tests/lastwake.rs
expression: out
---
LAST WAKE INFORMATION
==================================================

[LAST SLEEP/WAKE CYCLE]
------------------------------
  Sleep time: 2025-04-29T01:15:18-07:00
  Wake time:  2025-04-29T08:22:44-07:00
  Duration:   7h 7m 26s

[WAKE SOURCE]
------------------------------
  Wake IRQ: 9
  Device: 9-fasteoi acpi

==================================================
