tests/snapshots/lastwake__lastwake_history.snap
---
source: tests/lastwake.rs
assertion_line: 144
expression: out
---
LAST WAKE INFORMATION
==================================================

[LAST SLEEP/WAKE CYCLE]
------------------------------
  Sleep time: 2025-04-29T01:15:18-0700
  Wake time:  2025-04-29T08:22:44-0700
  Duration:   7h 7m 26s

[WAKE SOURCE]
------------------------------
  Wake IRQ: 9
  Device: 9-fasteoi acpi

[RECENT SLEEP/WAKE HISTORY]
------------------------------
  2025-04-01T07:45:12-0700 - WAKE
  2025-04-15T22:10:05-0700 - SLEEP
  2025-04-16T07:55:33-0700 - WAKE
  2025-04-29T01:15:18-0700 - SLEEP
  2025-04-29T08:22:44-0700 - WAKE

==================================================
