tests/snapshots/lastwake__lastwake_verbose.snap
---
source: tests/lastwake.rs
assertion_line: 113
expression: stripped
---
LAST WAKE INFORMATION
==================================================

[LAST SLEEP/WAKE CYCLE]
------------------------------
  Sleep time: 2025-04-29T01:15:18-0700
  Wake time:  2025-04-29T08:22:44-0700
  Duration:   7h 7m 26s

[WAKE SOURCE]
------------------------------
  Wake IRQ: 9
  Device: 9-fasteoi acpi

[ENABLED ACPI WAKE DEVICES]
------------------------------
  GPP0: S4 (pci:0000:00:01.1)
  PWRB: S4

==================================================
